Fixed layout issues with aside

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/*
-  Josh's Custom CSS Reset
-*/
 *,
 *::before,
 *::after {
@@ -39,6 +36,11 @@ h6 {
     overflow-wrap: break-word;
 }
 
+@font-face {
+    font-family: odinFont;
+    src: url(./assets/fonts/Norse-Bold.otf);
+}
+
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -54,38 +56,51 @@ input[type=number] {
 #main {
     display: grid;
     grid-template: repeat(10, 1fr) / repeat(10, 1fr);
-    /* gap: 15px; */
-    /* text-align: center; */
-    height: 100%;
-    /* padding: 16px; */
+    height: 100vh;
     justify-content: center;
-    /* width: fit-content; */
-
 }
 
-#image-to-left {
-    background: url(/assets/images/halie-west-25xggax4bSA-unsplash.jpg);
+.image-to-left {
     grid-row: 1 / 11;
     grid-column: 1 / 5;
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
     flex-direction: column;
+    align-items: center;
+    padding-top: 12vw;
+    position: relative;
+    background: url(/assets/images/halie-west-25xggax4bSA-unsplash.jpg);
+    background-size: cover;
+    min-width: 345px;
+    height: 100vh;
+    color: rgba(255, 255, 255, 1);
+}
 
+.image-to-left .credit {
+    font-size: 2rem;
+    color: inherit;
+    position: absolute;
+    bottom: 10px;
+}
+
+.credit a {
+    color: inherit;
 }
 
 .logo-container {
     display: flex;
     width: 100%;
-    height: fit-content;
     flex-direction: row;
-
+    justify-content: center;
+    align-items: center;
     background-color: rgba(0, 0, 0, .5);
     color: #fff;
 }
 
-#logo {
-    /* padding-top: 20px; */
-    padding-left: 20%;
+#odin {
+    font-family: odinFont;
+    font-size: 8vw;
+}
 
+#logo {
+    height: 76%;
 }
